# Kwitt

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  package.json  portfolio.json
agents/: Dockerfile  README.md  cli_agent.ts  code.ts  devops.ts  doctor.ts  enhanced-portfolio.ts  frontend.ts  git.ts  index.ts  intent.ts  orchestrator.ts  portfolio.ts  pyproject.toml  requirements.txt  telegram.ts  version.ts
agents/src/: orchestrator.py  server.py
agents/src/agents/: creative.py  deploy.py  intake.py  monitor.py  state.py
agents/src/middleware/: auth.py
agents/src/tools/: __init__.py  job_storage.py
backend/: Dockerfile  package.json
backend/src/: index.js
bot/: Dockerfile  package-lock.json  package.json
bot/src/: config.js  index.js
bot/src/cli/: executor.js
bot/src/data/: portfolio.js
bot/src/handlers/: actions.js  agents.js  message.js
bot/src/keyboards/: index.js
bot/src/parsers/: intent.js
bot/tests/: bot.test.js
core/: cli_runner.ts  constants.ts  types.ts
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/portfolio/: route.ts
frontend/src/app/api/portfolio/projects/: route.ts
infra/: Dockerfile  docker-compose.yml
scripts/: setup.bat  setup.sh
tools/: filesystem.ts  git.ts  index.ts  llm.ts  telegram.ts
