[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kwitt-agents"
version = "2.0.0"
description = "AI agents for automated portfolio creation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
